# flutter_vision3d

./: .gitignore  .gitmodules  .pubignore  CHANGELOG.md  FUNDING.yml  LICENSE  README.md  pubspec.yaml
doc/: flutter_vision.drawio
example/: README.md  pubspec.yaml
example/lib/: coco_names.dart  configurePanel.dart  define.dart  main.dart  main_old.dart  route.dart  ui.dart  viewModel.dart
example/lib/demo/: LIPSFace.dart
example/lib/efficient_net/: efficient_net.binding.dart  efficient_net.controller.dart  efficient_net.view.dart
example/lib/faceRecognizer/: LIPSFace.dart  fr.binding.dart  fr.controller.dart  fr.view.dart
example/lib/hand_detection/: hand_detection.binding.dart  hand_detection.controller.dart  hand_detection.view.dart
example/lib/handler/: handler.binding.dart  handler.controller.dart  handler.view.dart
example/lib/opencv/: opencv.binding.dart  opencv.controller.dart  opencv.view.dart
example/lib/openni2/: openni2.binding.dart  openni2.controller.dart  openni2.view.dart
example/lib/realsense/: realsense.binding.dart  realsense.controller.dart  realsense.view.dart
example/lib/ros/: ros.binding.dart  ros.controller.dart  ros.view.dart
example/lib/uvc/: uvc.binding.dart  uvc.controller.dart  uvc.view.dart
example/lib/widgets/pointcloud/: pointcloud.controller.dart  pointcloud.view.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
handler/: CMakeLists.txt  flutter_3d_vision_handler.cpp  flutter_3d_vision_handler.h  flutter_vision3d_handler.cpp
lib/: algorithm.dart  constants.dart  flutter_vision.dart  flutter_vision3d.dart  model.dart  opencv_mat.dart
lib/camera/: camera.dart  dummy.dart  openni.dart  realsense.dart  ros_camera.dart  uvc.dart
linux/: CMakeLists.txt  flutter_vision3d_plugin.cc  flutter_vision_plugin.cc
linux/include/flutter_vision/: depth_texture.hpp  flutter_vision_plugin.h  fv_texture.h  ir_texture.hpp  opengl.h  opengl_texture.h  openni2_wrapper.hpp  realsense.h  rgb_texture.hpp  shader.h  tflite.h  uvc_texture.hpp
linux/include/flutter_vision/camera/: dummy.h  fv_camera.h  openni2.h  realsense.h  ros2.h  uvc.h
linux/include/flutter_vision/pipeline/: flutter_vision_handler.h  pipeline.h  tf_pipeline.h
linux/include/flutter_vision3d/: flutter_vision3d_plugin.h  fv_texture.h
linux/include/flutter_vision3d/camera/: dummy.h  fv_camera.h  openni2.h  ros2.h
linux/include/flutter_vision3d/pipeline/: flutter_vision3d_handler.h  pipeline.h
test/: flutter_vision_test.dart
windows/: CMakeLists.txt  flutter_3d_vision_plugin.cpp  flutter_vision_plugin.cpp
windows/include/flutter_vision/: camera.h  depth_texture.hpp  flutter_vision_plugin.h  ir_texture.hpp  openni2.h  openni2_wrapper.hpp  realsense.h  rgb_texture.hpp  texture.h  tflite.h  uvc_texture.hpp
windows/include/flutter_vision/camera/: dummy.h  fv_camera.h  openni2.h  realsense.h  uvc.h
windows/include/flutter_vision/opengl/: model_rs_pointcloud.h  opengl.cpp  opengl.h  opengl_texture.h  shader.h
windows/include/flutter_vision/pipeline/: pipeline.h
windows/include/flutter_vision3d/: flutter_vision3d_plugin.h  tflite.h
windows/include/flutter_vision3d/barcode_scanner/: opencv_barcode.hpp  zxing.hpp
windows/include/flutter_vision3d/camera/: fv_camera.h  realsense.h
windows/include/flutter_vision3d/opengl/: camera.hpp  model_axis.h  model_pointcloud.h  opengl.cpp  opengl.h  shader.h
windows/include/flutter_vision3d/pipeline/: pipeline.h
